force-app/main/default/objects/geopointe__Action__c/geopointe__Action__c.object-meta.xml
<CustomObject>
    <description>Object that stores custom map actions for the Geopointe application.</description>
    <label>Geopointe Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>