force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Action_Type__c</fullName>
    <inlineHelpText>URL - Open the URL of a webpage. This can be a internal salesforce.com page or external website. 

Apex - Invoke custom logic using Apex code.</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>