force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Active__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable or disable this action on the Map page.</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>