force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Apex_Class__c</fullName>
    <inlineHelpText>The name of the Apex class for this action. This class must implement the geopointe.ActionHandler interface.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>