force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Apply_To__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Apply_To__c</fullName>
    <inlineHelpText>Record (Map Point) - This action will be a link or button displayed in the detail bubble on the Map page and will only apply to the selected record.

List (Data Set Search) - This action will be applied to all records returned in a Data Set search.</inlineHelpText>
    <label>Apply To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Record</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>