force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Available_SF1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Available_SF1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this action will be available in the Salesforce1 Geopointe mobile app. Currently only Record actions are supported in the Salesforce1 mobile app.</inlineHelpText>
    <label>Available (Mobile)</label>
    <type>Checkbox</type>
</CustomField>