force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Available_Web__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Available_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this action will be available in web version of Geopointe.</inlineHelpText>
    <label>Available (Web)</label>
    <type>Checkbox</type>
</CustomField>