force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Batch_Size__c</fullName>
    <inlineHelpText>For Apex actions this value controls how many records are sent to the receiving Apex class per Apex transaction. If blank, all records are sent in one batch.</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>