force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Behavior__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Behavior__c</fullName>
    <inlineHelpText>New Window - This link will open a new window or tab in the user&apos;s browser.

Same Window - This link will redirect the user away from the current Map page.

Modal - The URL will be opened in a popup (modal) window within the map page.</inlineHelpText>
    <label>Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Window</fullName>
            </value>
            <value>
                <fullName>Same Window</fullName>
            </value>
            <value>
                <fullName>Modal Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>