force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Calendar_City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Calendar_City__c</fullName>
    <label>Calendar City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>