force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Calendar_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Calendar_Record_Id__c</fullName>
    <label>Calendar Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>