force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Calendar_State__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Calendar_State__c</fullName>
    <label>Calendar State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>