force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Calendar_Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Calendar_Street__c</fullName>
    <label>Calendar Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>