force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Create_Record_Default_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Create_Record_Default_Field_Values__c</fullName>
    <label>Create Record Default Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>