force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Create_Record_SObject__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Create_Record_SObject__c</fullName>
    <label>Create Record SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>