force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Display_Type__c</fullName>
    <inlineHelpText>In the record detail bubble on the Map page Buttons are displayed first and the Links below. 

Buttons are more prominent and should be used for the most commonly used actions.</inlineHelpText>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>