force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Field_Sets_Mapping__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Field_Sets_Mapping__c</fullName>
    <label>Field Sets Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>