force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Form_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Form_Type__c</fullName>
    <inlineHelpText>If Lightning Page Layout is selected, the action will only be visible in Lightning Experience.</inlineHelpText>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Set</fullName>
            </value>
            <value>
                <fullName>Lightning Page Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>