force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Layout__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Layout__c</fullName>
    <inlineHelpText>Stored JSON data about how to structure the layout of the action</inlineHelpText>
    <label>Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>