force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Link_URL__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Link_URL__c</fullName>
    <inlineHelpText>The webpage address navigated to when this action is selected. For internal salesforce.com pages it is best to use relative URLs.</inlineHelpText>
    <label>Link URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>