force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Map_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Name__c</fullName>
    <label>Map Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>