force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Map_Objects__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Objects__c</fullName>
    <inlineHelpText>Select the Map Objects this action can be applied to.</inlineHelpText>
    <label>sObjects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>