force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Modal_Height__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Modal_Height__c</fullName>
    <inlineHelpText>The height of the modal popup. Values can be defined in pixels such as &quot;800px&quot; or percent of window height, &quot;80%&quot;. Modal window size will be automatically adjusted if the values defined are larger than users viewable window size.</inlineHelpText>
    <label>Modal Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>