force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Name_Translated__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Name_Translated__c</fullName>
    <label>Name (Translated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>