force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Order__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Order__c</fullName>
    <inlineHelpText>Controls the order in which links and buttons are displayed in the action sections on the Map page.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>