force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Place_Country__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Place_Country__c</fullName>
    <label>Place Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>