force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Place_Field_Sets__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Place_Field_Sets__c</fullName>
    <label>Place Field Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>