force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Place_Longitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Place_Longitude__c</fullName>
    <label>Place Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>