force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Point_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Point_Type__c</fullName>
    <inlineHelpText>Select the type of Point this action can be applied to. Record, salesforce records. Places, the results of a places search, i.e. &apos;coffee shops&apos;. Map, apply any location on the map with an address search or right click. Route Stop, actions for route stops.</inlineHelpText>
    <label>Point Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>geopointe__Display_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Place</fullName>
            </value>
            <value>
                <fullName>Record</fullName>
                <default>true</default>
                <label>Record</label>
            </value>
            <value>
                <fullName>Route Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>