force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_City__c</fullName>
    <label>Record City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>