force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_Field_Sets__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_Field_Sets__c</fullName>
    <label>Record Field Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>