force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_Name__c</fullName>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>