force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_Postal_Code__c</fullName>
    <label>Record Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>