force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_Record_Id__c</fullName>
    <label>Record Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>