force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>