force-app/main/default/objects/geopointe__Action__c/fields/geopointe__RecordTypeIdMapping__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RecordTypeIdMapping__c</fullName>
    <label>Record Type Id Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>