force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Require_User_Location__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Require_User_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, and if User Latitude/Longitude fields are mapped, this Action will only be performed if User Location is available.</inlineHelpText>
    <label>Require User Location</label>
    <type>Checkbox</type>
</CustomField>