force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Run_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Run_Assignment_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign using active assignment rule</label>
    <type>Checkbox</type>
</CustomField>