force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Standard_Action__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Standard_Action__c</fullName>
    <inlineHelpText>If set, these are default actions included with the Geopointe application.</inlineHelpText>
    <label>Standard Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>