force-app/main/default/objects/geopointe__Action__c/fields/geopointe__Status_Message__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Status_Message__c</fullName>
    <inlineHelpText>This text is display while the Apex operation is being executed. Text should be short and descriptive such as: &quot;Loading...&quot;, &quot;Updating Contacts...&quot;, &quot;Processing...&quot;, etc.</inlineHelpText>
    <label>Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>