force-app/main/default/objects/geopointe__Action__c/fields/geopointe__User_Longitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__User_Longitude__c</fullName>
    <label>User Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>