force-app/main/default/objects/geopointe__Action__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Apply_To__c</columns>
    <columns>geopointe__Action_Type__c</columns>
    <columns>geopointe__Standard_Action__c</columns>
    <columns>geopointe__Map_Objects__c</columns>
    <columns>geopointe__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>